fixed body scrollbar

--- a/static/base.css
+++ b/static/base.css
@@ -10,6 +10,9 @@ body {
     background-image: url("/static/page_bg.avif");
     background-color: #326da8;
     font-family: 'avenirregular', arial;
+    overflow-y:auto;
+    scrollbar-width: auto;
+    scrollbar-color: #fff transparent;
 }
 
 h2 {
